--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
+    "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
-    "npx": "^10.2.2"
+    "npx": "^10.2.2",
+    "passport": "^0.5.3",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
